fix display issue on mobile by not repeating the background image

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -14,4 +14,5 @@ ul.spaced-list li {
     background-image: url("/img/bg.jpeg") !important;
     background-position: right center !important;
     background-size: 110%;
+    background-repeat: no-repeat;
 }
